--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -74,7 +74,8 @@
 					<div class="wow fadeInDown" data-wow-offset="0" data-wow-delay="0.1s">
 					</div>
 					<div class="wow fadeInUp" data-wow-offset="0" data-wow-delay="0.1s">
-  				<h1 class="h-light">Patient Engagement Service Focused on Improving Follow-Up Care in Developing Countries</h1>
+  				<h1 class="h-light">Innovating healthcare services in developing countries
+</h1>
 					</div>
 						<div class="well well-trans">
 						<div class="wow fadeInRight" data-wow-delay="0.1s">
