added vision statement, deleted text above checkmark, added mission statement to mission statement section, changed text in services section, added example review section, changed team section by adding team members and changing member pics, deleted text from contact us, and fixed facebook and twitter urls.

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -48,7 +48,9 @@
                 </button>
                 <a class="navbar-brand" href="index.html">
                     <img src="img/dawa/dawa.png" alt="" width="150" height="50" />
+
                 </a>
+                <h7><i>To Empower Patients with Healthier Lives</i></h7>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -81,9 +83,9 @@
 						<div class="wow fadeInRight" data-wow-delay="0.1s">
 
 						<ul class="lead-list">
-							<li><span class="fa fa-check fa-2x icon-success"></span> <span class="list"><strong>Low-Cost Solution for Health Facilities</strong><br />Providing a Patient Care Coordinator at a healthcare facility to collect patient information with consent and engaging patients</span></li>
+              <li><span class="fa fa-check fa-2x icon-success"></span> <span class="list"><strong>Engage Patients For Appointments and Medication</strong><br />Contacting patients using phone calls and text messages to engage patients about appointments and medication</span></li>
 							<li><span class="fa fa-check fa-2x icon-success"></span> <span class="list"><strong>Measure Health Outcomes</strong><br />Collecting data to measure patient satisfaction and improve healthcare facility performance</span></li>
-							<li><span class="fa fa-check fa-2x icon-success"></span> <span class="list"><strong>Engage Patients For Appointments and Medication</strong><br />Contacting patients using phone calls and text messages to engage patients about appointments and medication</span></li>
+              <li><span class="fa fa-check fa-2x icon-success"></span> <span class="list"><strong>Low-Cost Solution for Health Facilities</strong><br />Providing a Patient Care Coordinator at a healthcare facility to collect patient information with consent and engaging patients</span></li>
 						</ul>
 						<p class="text-right wow bounceIn" data-wow-delay="0.4s">
 						<!-- <a href="#" class="btn btn-skin btn-lg">Learn more <i class="fa fa-angle-right"></i></a> -->
@@ -103,11 +105,12 @@
     <div class="container">
 
         <div class="wow fadeInUp" data-wow-delay="0.2s">
+          <h6>dawaCare's mission is innovating patient engagement services by enhancing follow-up care in developing countries.</h6>
         <h6>Improving patient engagement will solve many issues with adherence to treatment, which is especially important in developing countries when access is limited.</h6>
         <h6>This will ensure that patients with life-threatening conditions such as malaria, TB, and HIV, have the necessary treatment and support.</h6>
+        </div>
 
 
-  </div>
   	<!-- Section: services -->
       <section id="service" class="home-section nopadding paddingtop-60">
   		<div class="container">
@@ -117,7 +120,6 @@
   				<img src="img/dawa/gavi.jpg" class="img-responsive" alt="" />
   				</div>
               </div>
-              <h4>dawaCare provides the following:</h4>
   			<div class="col-sm-3 col-md-3">
   				<div class="wow fadeInRight" data-wow-delay="0.1s">
             <div class="service-box">
@@ -125,7 +127,7 @@
   						<span class="fa fa-stethoscope fa-3x"></span>
   					</div>
   					<div class="service-desc">
-  						<h5>Patient Care Coordinator</h5>
+              <h5>Follow-up Care</h5>
   					</div>
                   </div>
   				</div>
@@ -136,7 +138,7 @@
   						<span class="fa fa-medkit fa-3x"></span>
   					</div>
   					<div class="service-desc">
-  						<h5>Appointment Reminders for Follow-Up</h5>
+              <h5>Appointment Reminders</h5>
   					</div>
                   </div>
   				</div>
@@ -146,7 +148,7 @@
   						<span class="fa fa-plus-square fa-3x"></span>
   					</div>
   					<div class="service-desc">
-  						<h5>Medication Reminders for Adherence</h5>
+  						<h5>Medication Reminders</h5>
   					</div>
                   </div>
   				</div>
@@ -172,7 +174,7 @@
   						<span class="fa fa-filter fa-3x"></span>
   					</div>
   					<div class="service-desc">
-  						<h5>Data Collection for Measurable Impact</h5>
+  						<h5>Data Collection to Measure Impact</h5>
   					</div>
                   </div>
   				</div>
@@ -182,7 +184,7 @@
   						<span class="fa fa-user-md fa-3x"></span>
   					</div>
   					<div class="service-desc">
-  						<h5>Provide Patient Satisfaction Review for Doctors</h5>
+  						<h5>Improve Patient Satisfaction</h5>
   					</div>
                   </div>
   				</div>
@@ -257,7 +259,112 @@
 	<!-- /Section: boxes -->
 
 
+  <!-- Section: testimonial -->
+      <section id="testimonial" class="home-section paddingbot-60 parallax" data-stellar-background-ratio="0.5">
 
+  <div class="carousel-reviews broun-block">
+      <div class="container">
+          <div class="row">
+              <div id="carousel-reviews" class="carousel slide" data-ride="carousel">
+
+                  <div class="carousel-inner">
+                      <div class="item active">
+                  	    <div class="col-md-4 col-sm-6">
+          				    <div class="block-text rel zmin">
+  						        <a title="" href="#">Emergency Contraception</a>
+  							    <div class="mark">My rating: <span class="rating-input"><span data-value="0" class="glyphicon glyphicon-star"></span><span data-value="1" class="glyphicon glyphicon-star"></span><span data-value="2" class="glyphicon glyphicon-star"></span><span data-value="3" class="glyphicon glyphicon-star"></span><span data-value="4" class="glyphicon glyphicon-star-empty"></span><span data-value="5" class="glyphicon glyphicon-star-empty"></span>  </span></div>
+  						        <p>Ne eam errem semper. Laudem detracto phaedrum cu vim, pri cu errem fierent fabellas. Quis magna in ius, pro vidit nonumy te, nostrud ...</p>
+  							    <ins class="ab zmin sprite sprite-i-triangle block"></ins>
+  					        </div>
+  							<div class="person-text rel text-light">
+  								<img src="img/testimonials/1.jpg" alt="" class="person img-circle" />
+  								<a title="" href="#">Anna</a>
+  								<span>Chicago, Illinois</span>
+  							</div>
+  						</div>
+              			<div class="col-md-4 col-sm-6 hidden-xs">
+  						    <div class="block-text rel zmin">
+  						        <a title="" href="#">Orthopedic Surgery</a>
+  							    <div class="mark">My rating: <span class="rating-input"><span data-value="0" class="glyphicon glyphicon-star"></span><span data-value="1" class="glyphicon glyphicon-star"></span><span data-value="2" class="glyphicon glyphicon-star-empty"></span><span data-value="3" class="glyphicon glyphicon-star-empty"></span><span data-value="4" class="glyphicon glyphicon-star-empty"></span><span data-value="5" class="glyphicon glyphicon-star-empty"></span>  </span></div>
+  						        <p>Ne eam errem semper. Laudem detracto phaedrum cu vim, pri cu errem fierent fabellas. Quis magna in ius, pro vidit nonumy te, nostrud ...</p>
+  							    <ins class="ab zmin sprite sprite-i-triangle block"></ins>
+  				            </div>
+  							<div class="person-text rel text-light">
+  				                <img src="img/testimonials/2.jpg" alt="" class="person img-circle" />
+  								<a title="" href="#">Matthew G</a>
+  								<span>San Antonio, Texas</span>
+  							</div>
+  						</div>
+  						<div class="col-md-4 col-sm-6 hidden-sm hidden-xs">
+  							<div class="block-text rel zmin">
+  								<a title="" href="#">Medical consultation</a>
+  								<div class="mark">My rating: <span class="rating-input"><span data-value="0" class="glyphicon glyphicon-star"></span><span data-value="1" class="glyphicon glyphicon-star"></span><span data-value="2" class="glyphicon glyphicon-star"></span><span data-value="3" class="glyphicon glyphicon-star"></span><span data-value="4" class="glyphicon glyphicon-star"></span><span data-value="5" class="glyphicon glyphicon-star"></span>  </span></div>
+  						        <p>Ne eam errem semper. Laudem detracto phaedrum cu vim, pri cu errem fierent fabellas. Quis magna in ius, pro vidit nonumy te, nostrud ...</p>
+  							    <ins class="ab zmin sprite sprite-i-triangle block"></ins>
+  							</div>
+  							<div class="person-text rel text-light">
+  								<img src="img/testimonials/3.jpg" alt="" class="person img-circle" />
+  								<a title="" href="#">Scarlet Smith</a>
+  								<span>Dallas, Texas</span>
+  							</div>
+  						</div>
+                      </div>
+                      <div class="item">
+                          <div class="col-md-4 col-sm-6">
+          				    <div class="block-text rel zmin">
+  						        <a title="" href="#">Birth control pills</a>
+  							    <div class="mark">My rating: <span class="rating-input"><span data-value="0" class="glyphicon glyphicon-star"></span><span data-value="1" class="glyphicon glyphicon-star"></span><span data-value="2" class="glyphicon glyphicon-star"></span><span data-value="3" class="glyphicon glyphicon-star"></span><span data-value="4" class="glyphicon glyphicon-star-empty"></span><span data-value="5" class="glyphicon glyphicon-star-empty"></span>  </span></div>
+  						        <p>Ne eam errem semper. Laudem detracto phaedrum cu vim, pri cu errem fierent fabellas. Quis magna in ius, pro vidit nonumy te, nostrud ...</p>
+  							    <ins class="ab zmin sprite sprite-i-triangle block"></ins>
+  					        </div>
+  							<div class="person-text rel text-light">
+  								<img src="img/testimonials/4.jpg" alt="" class="person img-circle" />
+  								<a title="" href="#">Lucas Thompson</a>
+  								<span>Austin, Texas</span>
+  							</div>
+  						</div>
+              			<div class="col-md-4 col-sm-6 hidden-xs">
+  						    <div class="block-text rel zmin">
+  						        <a title="" href="#">Radiology</a>
+  							    <div class="mark">My rating: <span class="rating-input"><span data-value="0" class="glyphicon glyphicon-star"></span><span data-value="1" class="glyphicon glyphicon-star"></span><span data-value="2" class="glyphicon glyphicon-star-empty"></span><span data-value="3" class="glyphicon glyphicon-star-empty"></span><span data-value="4" class="glyphicon glyphicon-star-empty"></span><span data-value="5" class="glyphicon glyphicon-star-empty"></span>  </span></div>
+  						        <p>Ne eam errem semper. Laudem detracto phaedrum cu vim, pri cu errem fierent fabellas. Quis magna in ius, pro vidit nonumy te, nostrud ...</p>
+  							    <ins class="ab zmin sprite sprite-i-triangle block"></ins>
+  				            </div>
+  							<div class="person-text rel text-light">
+  								<img src="img/testimonials/5.jpg" alt="" class="person img-circle" />
+  						        <a title="" href="#">Ella Mentree</a>
+  								<span>Fort Worth, Texas</span>
+  							</div>
+  						</div>
+  						<div class="col-md-4 col-sm-6 hidden-sm hidden-xs">
+  							<div class="block-text rel zmin">
+  								<a title="" href="#">Cervical Lesions</a>
+  								<div class="mark">My rating: <span class="rating-input"><span data-value="0" class="glyphicon glyphicon-star"></span><span data-value="1" class="glyphicon glyphicon-star"></span><span data-value="2" class="glyphicon glyphicon-star"></span><span data-value="3" class="glyphicon glyphicon-star"></span><span data-value="4" class="glyphicon glyphicon-star"></span><span data-value="5" class="glyphicon glyphicon-star"></span>  </span></div>
+  						        <p>Ne eam errem semper. Laudem detracto phaedrum cu vim, pri cu errem fierent fabellas. Quis magna in ius, pro vidit nonumy te, nostrud ...</p>
+  							    <ins class="ab zmin sprite sprite-i-triangle block"></ins>
+  							</div>
+  							<div class="person-text rel text-light">
+  								<img src="img/testimonials/6.jpg" alt="" class="person img-circle" />
+  								<a title="" href="#">Suzanne Adam</a>
+  								<span>Detroit, Michigan</span>
+  							</div>
+  						</div>
+                      </div>
+
+
+                  </div>
+
+                  <a class="left carousel-control" href="#carousel-reviews" role="button" data-slide="prev">
+                      <span class="glyphicon glyphicon-chevron-left"></span>
+                  </a>
+                  <a class="right carousel-control" href="#carousel-reviews" role="button" data-slide="next">
+                      <span class="glyphicon glyphicon-chevron-right"></span>
+                  </a>
+              </div>
+          </div>
+      </div>
+  </div>
+  	</section>
 
 
 
@@ -303,7 +410,7 @@
                     <li class="cbp-item">
                         <a href="doctors/member3.html" class="cbp-caption cbp-singlePage">
                             <div class="cbp-caption-defaultWrap">
-                                <img src="img/dawa/auto.jpg" alt="" width="100%">
+                                <img src="img/dawa/thedefinitivedanny.jpg" alt="" width="100%">
                             </div>
                             <div class="cbp-caption-activeWrap">
                                 <div class="cbp-l-caption-alignCenter">
@@ -317,7 +424,39 @@
                         <div class="cbp-l-grid-team-position">Product</div>
                     </li>
 
+                    <li class="cbp-item">
+                     <a href="doctors/member2.html" class="cbp-caption cbp-singlePage">
+                            <div class="cbp-caption-defaultWrap">
+                                <img src="img/dawa/ina.jpg" alt="" width="100%">
+                            </div>
+                            <div class="cbp-caption-activeWrap">
+                                <div class="cbp-l-caption-alignCenter">
+                                    <div class="cbp-l-caption-body">
+                                        <div class="cbp-l-caption-text">VIEW PROFILE</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                        <a href="doctors/member2.html" class="cbp-singlePage cbp-l-grid-team-name">Ina Miraka</a>
+                        <div class="cbp-l-grid-team-position">Patient Success</div>
+                    </li>
 
+                    <li class="cbp-item">
+                     <a href="doctors/member2.html" class="cbp-caption cbp-singlePage">
+                            <div class="cbp-caption-defaultWrap">
+                                <img src="img/dawa/jesse.png" alt="" width="100%">
+                            </div>
+                            <div class="cbp-caption-activeWrap">
+                                <div class="cbp-l-caption-alignCenter">
+                                    <div class="cbp-l-caption-body">
+                                        <div class="cbp-l-caption-text">VIEW PROFILE</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                        <a href="doctors/member2.html" class="cbp-singlePage cbp-l-grid-team-name">Jesse Naldo</a>
+                        <div class="cbp-l-grid-team-position">Software Dev</div>
+                    </li>
 
 
                 </ul>
@@ -352,7 +491,6 @@
 					<div class="widget">
 						<h5>Contact Us</h5>
 						<p>
-						Feel free to call or email us.  We would love to answer any questions!
 						</p>
 						<ul>
 							<li>
@@ -385,9 +523,9 @@
 					<div class="widget">
 						<h5>Follow us</h5>
 						<ul class="company-social">
-								<li class="social-facebook"><a href="facebook.com/dawacare2017"><i class="fa fa-facebook"></i></a></li>
-								<li class="social-twitter"><a href="twitter.com/dawacare"><i class="fa fa-twitter"></i></a></li>
-								<li class="social-google"><a href="mailto:dawaCare@zahncenter.com?Subject=Hello"><i class="fa fa-envelope"></i></a></li>
+								<li class="social-facebook"><a href="https://facebook.com/dawacare2017"> <i class="fa fa-facebook"></i>&nbsp; Facebook</a></li>
+								<li class="social-twitter"><a href="https://twitter.com/dawacare"><i class="fa fa-twitter"></i>&nbsp; Twitter</a></li>
+								<li class="social-google"><a href="mailto:dawaCare@zahncenter.com?Subject=Hello"><i class="fa fa-envelope"></i>&nbsp; Email</a></li>
 						</ul>
 					</div>
 					</div>
