--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -50,7 +50,7 @@
                     <img src="img/dawa/dawa.png" alt="" width="150" height="50" />
 
                 </a>
-                <h7><i>To Empower Patients with Healthier Lives</i></h7>
+                <div id="vision_statement"><h7><i>To Empower Patients with Healthier Lives</i></h7></div>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -76,8 +76,8 @@
 					<div class="wow fadeInDown" data-wow-offset="0" data-wow-delay="0.1s">
 					</div>
 					<div class="wow fadeInUp" data-wow-offset="0" data-wow-delay="0.1s">
-  				<h1 class="h-light">Innovating healthcare services in developing countries
-</h1>
+  				<!-- <h1 class="h-light">Innovating healthcare services in developing countries
+</h1> -->
 					</div>
 						<div class="well well-trans">
 						<div class="wow fadeInRight" data-wow-delay="0.1s">
@@ -105,7 +105,7 @@
     <div class="container">
 
         <div class="wow fadeInUp" data-wow-delay="0.2s">
-          <h6>dawaCare's mission is innovating patient engagement services by enhancing follow-up care in developing countries.</h6>
+          <div id="mission_statement"><h6>dawaCare's mission is innovating patient engagement services by enhancing follow-up care in developing countries.</h6></div>
         <h6>Improving patient engagement will solve many issues with adherence to treatment, which is especially important in developing countries when access is limited.</h6>
         <h6>This will ensure that patients with life-threatening conditions such as malaria, TB, and HIV, have the necessary treatment and support.</h6>
         </div>
@@ -115,12 +115,12 @@
       <section id="service" class="home-section nopadding paddingtop-60">
   		<div class="container">
           <div class="row">
-  			<div class="col-sm-6 col-md-6">
+  			<div class="col-sm-6 col-md-6" id="services_img">
   				<div class="wow fadeInUp" data-wow-delay="0.2s">
   				<img src="img/dawa/gavi.jpg" class="img-responsive" alt="" />
   				</div>
               </div>
-  			<div class="col-sm-3 col-md-3">
+  			<div class="col-sm-3 col-md-3" id="services_right_col">
   				<div class="wow fadeInRight" data-wow-delay="0.1s">
             <div class="service-box">
   					<div class="service-icon">
@@ -195,6 +195,35 @@
   		</div>
   	</section>
   	<!-- /Section: services -->
+
+
+    <!-- <section id="callaction" class="home-section paddingtop-40">
+               <div class="container">
+    				<div class="row">
+    					<div class="col-md-12">
+    						<div class="callaction bg-gray">
+    							<div class="row">
+    								<div class="col-md-8">
+    									<div class="wow fadeInUp" data-wow-delay="0.1s">
+    									<div class="cta-text">
+    									<h3>We would like to hear from you umm, reach out to us by clicking contact us.</h3>
+    									<p>Lorem ipsum dolor sit amet consectetur adipiscing elit uisque interdum ante eget faucibus. </p>
+    									</div>
+    									</div>
+    								</div>
+    								<div class="col-md-4">
+    									<div class="wow lightSpeedIn" data-wow-delay="0.1s">
+    										<div class="cta-btn">
+    										<a href="#" class="btn btn-skin btn-lg">Call To ACTION</a>
+    										</div>
+    									</div>
+    								</div>
+    							</div>
+    						</div>
+    					</div>
+    				</div>
+                </div>
+    	</section> -->
 
 
 	<!-- Section: boxes -->
@@ -391,70 +420,77 @@
                 <ul>
 
                     <li class="cbp-item">
-                     <a href="doctors/member2.html" class="cbp-caption cbp-singlePage">
+                     <div class="cbp-caption cbp-singlePage">
                             <div class="cbp-caption-defaultWrap">
                                 <img src="img/dawa/manni-profile.jpg" alt="" width="100%">
                             </div>
-                            <div class="cbp-caption-activeWrap">
+                            <!-- <div class="cbp-caption-activeWrap">
                                 <div class="cbp-l-caption-alignCenter">
                                     <div class="cbp-l-caption-body">
                                         <div class="cbp-l-caption-text">VIEW PROFILE</div>
                                     </div>
                                 </div>
-                            </div>
-                        </a>
-                        <a href="doctors/member2.html" class="cbp-singlePage cbp-l-grid-team-name">Emmanuel Pendie</a>
+                            </div> -->
+                        </div>
+                        <p class="cbp-singlePage cbp-l-grid-team-name">Emmanuel Pendie</p>
                         <div class="cbp-l-grid-team-position">Operations</div>
                     </li>
 
                     <li class="cbp-item">
-                        <a href="doctors/member3.html" class="cbp-caption cbp-singlePage">
+                        <!-- <a href="doctors/member3.html" class="cbp-caption cbp-singlePage"> -->
+                        <div class="cbp-caption cbp-singlePage">
                             <div class="cbp-caption-defaultWrap">
                                 <img src="img/dawa/thedefinitivedanny.jpg" alt="" width="100%">
                             </div>
-                            <div class="cbp-caption-activeWrap">
+                            <!-- <div class="cbp-caption-activeWrap">
                                 <div class="cbp-l-caption-alignCenter">
                                     <div class="cbp-l-caption-body">
                                       <div class="cbp-l-caption-text">VIEW PROFILE</div>
                                     </div>
                                 </div>
-                            </div>
-                        </a>
-                  <a href="doctors/member3.html" class="cbp-singlePage   cbp-l-grid-team-name">Danny Tsoi</a>
+                            </div> -->
+                        <!-- </a> -->
+                      </div>
+                  <p class="cbp-singlePage   cbp-l-grid-team-name">Danny Tsoi</p>
                         <div class="cbp-l-grid-team-position">Product</div>
                     </li>
 
                     <li class="cbp-item">
-                     <a href="doctors/member2.html" class="cbp-caption cbp-singlePage">
+                     <!-- <a href="doctors/member2.html" class="cbp-caption cbp-singlePage"> -->
+                     <div class="cbp-caption cbp-singlePage">
+
                             <div class="cbp-caption-defaultWrap">
                                 <img src="img/dawa/ina.jpg" alt="" width="100%">
                             </div>
-                            <div class="cbp-caption-activeWrap">
+                            <!-- <div class="cbp-caption-activeWrap">
                                 <div class="cbp-l-caption-alignCenter">
                                     <div class="cbp-l-caption-body">
                                         <div class="cbp-l-caption-text">VIEW PROFILE</div>
                                     </div>
                                 </div>
-                            </div>
-                        </a>
-                        <a href="doctors/member2.html" class="cbp-singlePage cbp-l-grid-team-name">Ina Miraka</a>
+                            </div> -->
+                        </div>
+                        <!-- <a href="doctors/member2.html" class="cbp-singlePage cbp-l-grid-team-name">Ina Miraka</a> -->
+                        <p class="cbp-singlePage cbp-l-grid-team-name">Ina Miraka</p>
                         <div class="cbp-l-grid-team-position">Patient Success</div>
                     </li>
 
                     <li class="cbp-item">
-                     <a href="doctors/member2.html" class="cbp-caption cbp-singlePage">
+                     <!-- <a href="doctors/member2.html" class="cbp-caption cbp-singlePage"> -->
+                       <div class="cbp-caption cbp-singlePage">
+
                             <div class="cbp-caption-defaultWrap">
                                 <img src="img/dawa/jesse.png" alt="" width="100%">
                             </div>
-                            <div class="cbp-caption-activeWrap">
+                            <!-- <div class="cbp-caption-activeWrap">
                                 <div class="cbp-l-caption-alignCenter">
                                     <div class="cbp-l-caption-body">
                                         <div class="cbp-l-caption-text">VIEW PROFILE</div>
                                     </div>
                                 </div>
-                            </div>
-                        </a>
-                        <a href="doctors/member2.html" class="cbp-singlePage cbp-l-grid-team-name">Jesse Naldo</a>
+                            </div> -->
+                        </div>
+                        <p class="cbp-singlePage cbp-l-grid-team-name">Jesse Naldo</p>
                         <div class="cbp-l-grid-team-position">Software Dev</div>
                     </li>
 
@@ -471,10 +507,10 @@
 
 
 
-
+  <br />
 	<footer id="contact-us">
 
-		<div class="container">
+		<div class="container" id="footer">
 			<div class="row">
 				<div class="col-sm-6 col-md-4">
 					<div class="wow fadeInDown" data-wow-delay="0.1s">
@@ -503,7 +539,7 @@
 								<span class="fa-stack fa-lg">
 									<i class="fa fa-circle fa-stack-2x"></i>
 									<i class="fa fa-envelope-o fa-stack-1x fa-inverse"></i>
-								</span> dawaCare@zahncenternyc.com
+								</span> <p class="email">dawaCare@zahncenternyc.com</p>
 							</li>
 
 						</ul>
